# schemalution

./: .gitignore  Makefile  README.md  conftest.py  pyproject.toml  pyrightconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/workflows/: ci.yml
assets/diagrams/: capabilities-outcomes-mobile.dot  capabilities-outcomes.dot  economic-value-mobile.dot  economic-value.dot  schemalution-logo.dot  value-flow-with-mobile.dot  value-flow-with.dot  value-flow-without-mobile.dot  value-flow-without.dot
docs/: Coding-standards.md  Prompts.md  Risks.md  Roadmap.md  Solution-architecture.md  architectures.md
docs/cli/: format-v1.schema.json
docs/milestones-input/: M12.md  M9.md
scripts/: ensure_uv.py  render-graphviz.sh
src/schemalution_dev/: __init__.py
src/schevo_dev/: __init__.py
